--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
                                 <p>2</p>
                                 <p>3</p>
                             </div>
+                            <label for="slider"></label>
                             <input
                                 type="range"
                                 min="1"
                                 max="3"
                                 value="1"
+                                id="slider"
                                 class="theme-slider"
                             />
                         </div>
