--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
                                 <p>2</p>
                                 <p>3</p>
                             </div>
-                            <label for="slider"></label>
                             <input
                                 type="range"
                                 min="1"
                                 max="3"
                                 value="1"
-                                id="slider"
+                                aria-label="Theme Slider"
                                 class="theme-slider"
                             />
                         </div>
